# hermes-skill-guard

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  NOTICE.md  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  plugin.yaml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  configuration.md  data-model.md  faq.md  getting-started.md  hermes-protocol.md  index.md  intent-development.md  observability.md  publishing.md  rule-engine.md  runtime-safety.md
docs/adr/: 0001-plugin-not-core.md  0002-dry-run-first.md  0003-enforcement-modes.md  0004-compatibility-protocol-gating.md  0005-skill-relations-model.md  0006-configurable-rule-engine.md
docs/examples/: custom-rules.json
docs/zh-CN/: architecture.md  getting-started.md  index.md
scripts/: smoke-test.sh  verify-release.sh
skills/skill-guard/references/: troubleshooting.md  workflow.md
src/hermes_skill_guard/: __init__.py  __main__.py  config.py  context.py  ids.py  plugin.py  policy.py  redaction.py  registry.py  runtime.py  schemas.py
src/hermes_skill_guard/_bundled_skills/: __init__.py
src/hermes_skill_guard/_bundled_skills/skill-guard/: SKILL.md
src/hermes_skill_guard/data/: compat.yaml  default-config.yaml  default_rules.json  rules.schema.json
src/hermes_skill_guard/hermes/: __init__.py  adapter.py
src/hermes_skill_guard/intents/: __init__.py  _extractors.py  auto_promoter.py  base.py  candidates.py  capture.py  compatibility.py  preflight.py  promotion.py  relations.py  reporting.py
src/hermes_skill_guard/observability/: __init__.py  otel.py  prometheus.py
src/hermes_skill_guard/rules/: __init__.py  context.py  engine.py  loader.py  validator.py
src/hermes_skill_guard/storage/: migrations.py  models.py  repository.py
tests/: conftest.py
tests/golden/: candidate_state_cases.yaml  conflict_cases.yaml  decision_cases.yaml  duplicate_cases.yaml  redaction_cases.yaml  rotation_cases.yaml  test_golden_fixtures.py
tests/helpers/: package_verification.py
tests/integration/: test_cli_direct.py  test_cli_smoke.py  test_enforcement_v02_contract.py  test_hook_flow.py  test_package_verification.py  test_plugin_registration.py  test_relations_flow.py  test_rule_engine_hermes_smoke.py
tests/unit/: test_adapter.py  test_auto_promote.py  test_candidates_intent.py  test_capture.py  test_cli.py  test_compatibility.py  test_config.py  test_dangling.py  test_extractors.py  test_migrations.py  test_observability.py  test_policy.py  test_preflight_branches.py  test_preflight_timeout.py  test_promotion.py  test_redaction.py  test_registry.py  test_relations.py  test_reporting.py  test_rule_engine.py  test_rule_loader.py  test_rule_schema.py  test_runtime.py  test_storage.py
