[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"

[project]
name = "hermes-skill-guard"
version = "0.1.11"
description = "Hermes-native guard for agent-created skills."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "hermes-skill-guard contributors" }]
keywords = ["hermes", "agent", "skills", "plugin", "governance"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "platformdirs>=4.2,<5",
  "pydantic>=2,<3",
  "pyyaml>=6,<7",
  "rich>=13,<16",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "bandit[toml]>=1.7,<2",
  "mypy>=1.10,<2",
  "pip-audit>=2.7,<3",
  "pre-commit>=3.7,<5",
  "pytest>=8,<10",
  "pytest-cov>=5,<8",
  "pytest-timeout>=2.3,<3",
  "ruff>=0.5,<1",
  "types-PyYAML>=6,<7",
]
otel = [
  "opentelemetry-api>=1.20,<2",
  "opentelemetry-sdk>=1.20,<2",
  "opentelemetry-exporter-otlp-proto-http>=1.20,<2",
]
prometheus = ["prometheus-client>=0.19,<1"]
observability = [
  "opentelemetry-api>=1.20,<2",
  "opentelemetry-sdk>=1.20,<2",
  "opentelemetry-exporter-otlp-proto-http>=1.20,<2",
  "prometheus-client>=0.19,<1",
]

[project.scripts]
hermes-skill-guard = "hermes_skill_guard.__main__:main"

[project.urls]
Homepage = "https://github.com/elliotten99/hermes-skill-guard"
Repository = "https://github.com/elliotten99/hermes-skill-guard"
Issues = "https://github.com/elliotten99/hermes-skill-guard/issues"
Changelog = "https://github.com/elliotten99/hermes-skill-guard/blob/main/CHANGELOG.md"
Documentation = "https://hermes-agent.nousresearch.com/docs/user-guide/features/plugins"
Hermes = "https://github.com/NousResearch/hermes-agent"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_skill_guard"]
artifacts = ["plugin.yaml"]

[tool.hatch.build.targets.sdist]
include = [
    "src/hermes_skill_guard/**",
    "tests/**",
    "docs/**",
    "scripts/**",
    "skills/**",
    "plugin.yaml",
    "pyproject.toml",
    "README.md",
    "README.zh-CN.md",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "CODE_OF_CONDUCT.md",
    "GOVERNANCE.md",
    "MAINTAINERS.md",
    "SECURITY.md",
    "NOTICE.md",
    "ROADMAP.md",
    "LICENSE",
]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["RUF012"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = [
  "opentelemetry.*",
  "prometheus_client",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --timeout=10"
testpaths = ["tests"]
markers = ["slow: subprocess smoke tests"]

[tool.coverage.run]
source = ["hermes_skill_guard"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "dist", ".ai-team"]
# B101: assert used — asserts in non-test code are acceptable for v0.1.x;
# they document invariants and are unlikely to be optimized out in our deployment context.
skips = ["B101"]
